# information_extraction

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/information_extraction_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/text/: attr_group.txt  label_flag.txt  label_group.txt  label_normal.txt  label_num.txt  label_text.txt  map.json  map_cn2en.json  value_flag.txt  value_text.txt
app/src/main/cpp/: AhoCorasick.hpp  CMakeLists.txt  Classifier.cpp  Classifier.hpp  Makefile  native-lib.cpp
app/src/main/java/com/example/information_extraction_app/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/information_extraction_app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: CMakeLists.txt  build.gradle.kts
mylibrary2/: CMakeLists.txt  build.gradle
